# artifacts/api-server/src/routes/index.ts
@@ -7,6 +7,9 @@ import galleryRouter from "./gallery";
 import contactsRouter from "./contacts";
 import contentRouter from "./content";
 import adminRouter from "./admin";
+import teachersRouter from "./teachers";
+import alumniRouter from "./alumni";
+import classroomsRouter from "./classrooms";
 
 const router: IRouter = Router();
 
@@ -18,5 +21,8 @@ router.use(galleryRouter);
 router.use(contactsRouter);
 router.use(contentRouter);
 router.use(adminRouter);
+router.use(teachersRouter);
+router.use(alumniRouter);
+router.use(classroomsRouter);
 
 export default router;
